<resources>
    <string name="app_name">TesteApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="meuBotaozinho">New Button</string>
    <string name="minhaViewzinha">Medium Text</string>
    <string name="login">Login</string>
    <string name="userName">User name</string>
    <string name="password" >Password</string>
    <string name="clientName" >Name</string>
    <string name="clientAge" >Age</string>
    <string name="clientPhone" >Phone</string>
    <string name="clientAddress" >Address</string>
    <string name="save">Save</string>
    <string name="successSave">Success!</string>
    <string name="requiredField">Required Field</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deleted_message">Deleted</string>
    <string name="confirm_delete">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="zipCode">Zip Code</string>
    <string name="findZipCode">Find Zip Code</string>
    <string name="streetType">StreetType</string>
    <string name="street">Street</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="loading">Loading</string>
    <string name="serviceWarning">Access failed or invalid Zip Code</string>
    <string name="share">Share</string>
    <string name="enjoy">Enjoy a free app to storage your clients!</string>
    <string name="invalidUserData">Invalid username or password!</string>
    <string name="invalidCode">Invalid Zip Code or Connection Failed</string>
</resources>
