<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextClientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/clientName"/>

    <EditText
        android:id="@+id/editTextClientAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numeric="integer"
        android:hint="@string/clientAge"/>

    <EditText
        android:id="@+id/editTextClientPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/clientPhone"/>

    <Button
        android:id="@+id/btnFindAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findZipCode"/>

    <EditText
        android:id="@+id/editTextClientZipCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zipCode"/>

    <EditText
        android:id="@+id/editTextClientStreetType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/streetType"/>

    <EditText
        android:id="@+id/editTextClientStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street"/>

    <EditText
        android:id="@+id/editTextClientNeighborhood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/neighborhood"/>

    <EditText
        android:id="@+id/editTextClientCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"/>

    <EditText
        android:id="@+id/editTextClientState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/state"/>

</LinearLayout>
</ScrollView>
